ラベルの修正と感染者データを静岡化

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -321,5 +321,6 @@
   "Twitterで{title}のグラフをシェア": "Twitterで{title}のグラフをシェア",
   "facebookで{title}のグラフをシェア": "facebookで{title}のグラフをシェア",
   "日付": "日付",
-  "不明": "不明"
+  "不明": "不明",
+  "県内の最新感染動向": "県内の最新感染動向"
 }
