refs #53 fix ogp:url

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -260,7 +260,7 @@
   "※最新の情報はWebページをご覧ください": "* Please check the latest information from the web site.",
   "〇": "✔",
   "ogp": {
-    "og:image": "https://stopcovid19.metro.tokyo.lg.jp/ogp/en/ogp-image.png"
+    "og:image": "https://dev-stopcovid19-hamamatsu.netlify.com/hamamatsu/ogp.png"
   },
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/us/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=en",
